Send Heroku, whitenoise

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,6 @@ stevedore==3.3.0
 typing-extensions==3.10.0.0
 tzlocal==2.1
 virtualenvwrapper==4.8.4
-
+Werkzeug==1.0.1
+whitenoise==5.3.0
+zipp==3.4.1
