--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.4.1
 backports.entry-points-selectable==1.1.0
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.5
 django-daterange-filter==1.3.0
+django-heroku==0.3.1
 djangorestframework==3.12.4
 filelock==3.0.12
 greenlet==1.1.0
